<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context="com.jf.passwordmanager.ViewActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:id="@+id/view_login_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/view_login_details"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/displaySitename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/site_name_input"
            android:textSize="@dimen/font_size"/>

        <EditText
            android:id="@+id/update_sitename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/displayUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_input"
            android:textSize="@dimen/font_size"/>

        <EditText
            android:id="@+id/update_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/displayPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_input"
            android:textSize="@dimen/font_size"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/displayNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes_input"
            android:textSize="@dimen/font_size"/>

        <EditText
            android:id="@+id/update_notes"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:inputType="textMultiLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorAccent"
                android:text="@string/update_login"
                android:textColor="#fff"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btnCopyPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="5dp"
                android:background="@color/background"
                android:elevation="4dp"
                android:text="@string/copy_password"
                android:textAllCaps="false"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnDeleteLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/deleteButton"
            android:elevation="4dp"
            android:text="@string/delete_login"
            android:textColor="#fff"
            android:textAllCaps="false"/>


    </LinearLayout>


</ScrollView>

